<resources>
    <string name="app_name">ZEEMI.TV</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="live_tab_title">LIVE</string>
    <string name="upcoming_tab_title">UPCOMING</string>
    <string name="popular_tab_title">POPULAR</string>

    <string name="empty_response_message">There are no new channels!</string>
    <string name="no_connection_message">Failed loading data! Try check connection!</string>
    <string name="failed_fetched_data_message">Failed loading data! Try again!</string>
    <string name="sync_data_message">Please turn on updating in the preferences!</string>
    <string name="click_on_channel_message">You are watching</string>

    <string name="preference_title">ZEEMI Settings</string>
    <string name="pref_update_category_title">Update and Sync with APIs</string>

    <string name="switch_live_summary_text_on">This option if selected will allow the application to check for live channels.\nON</string>
    <string name="switch_live_summary_text_off">This option if selected will allow the application to check for live channels.\nOFF</string>

    <string name="switch_upcoming_summary_text_on">This option if selected will allow the application to check for live channels.\nON</string>
    <string name="switch_upcoming_summary_text_off">This option if selected will allow the application to check for live channels.\nOFF</string>

    <string name="switch_popular_summary_text_on">This option if selected will allow the application to check for live channels.\nON</string>
    <string name="switch_popular_summary_text_off">This option if selected will allow the application to check for live channels.\nOFF</string>
</resources>
