<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="prefKeyUpdateSettings"
        android:title="@string/pref_update_category_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="updateLiveChannels"
            android:summaryOff="@string/switch_live_summary_text_off"
            android:summaryOn="@string/switch_live_summary_text_on"
            android:title="Update Live Channels" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="updateUpcomingChannels"
            android:summaryOff="@string/switch_upcoming_summary_text_off"
            android:summaryOn="@string/switch_upcoming_summary_text_on"
            android:title="Update Upcoming Channels" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="updatePopularChannels"
            android:summaryOff="@string/switch_popular_summary_text_off"
            android:summaryOn="@string/switch_popular_summary_text_on"
            android:title="Update Popular Channels" />

    </PreferenceCategory>
</PreferenceScreen>